# simpleDBMS-Server

./: .gitignore  CMakeLists.txt  CMakePresets.json  CMakeUserPresets-template.json  README.md  spec.md  vcpkg.json
src/: Core.cpp  Core.h  main.cpp
src/network/: NetReceiver.cpp  NetReceiver.h  NetSender.cpp  NetSender.h
